fixed mozilla flicker & changed white hue on dark mode fonts

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -28,7 +28,7 @@ body.dark-mode {
 	--main-bg-color-dark: var(--dark-main-bg-color-dark);
 	--secondary-bg-color: var(--dark-secondary-bg-color);
 	background-color: #363434;
-	color: white;
+	color: #f1f1f1;
 }
 
 h1,
